fixed wrong font-size of import buttons

--- a/app/styles/components/ui/buttons/input-button.css
+++ b/app/styles/components/ui/buttons/input-button.css
@@ -4,7 +4,6 @@
 }
 
 :global(.file-upload)::before {
-  font-size: 15px;
   color: #000;
 }
 
